ajustando imagem background

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 .s1-bg{
-  background-image: url("/Imagens/Geral/wallpaperflare.com_wallpaper.jpg");
+  background-image: url("./Imagens/Geral/wallpaperflare.com_wallpaper.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
